# rust-blog

./: Cargo.toml  blog.db  test.sh
migrations/2023-05-12-171122_create_users/: up.sql
migrations/2023-05-17-210629_create_posts/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/routes/: posts.rs
