[package]
name = "blog-actix"
version = "0.1.0"
author = ["Dominique DORDAIN <dordaindominique@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"

env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8.9"
diesel = {version = "1.4.8", features = ["sqlite", "r2d2"]}
dotenv = '0.15'
